--- a/01.Seletores/index.html
+++ b/01.Seletores/index.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Advinhe meu número!</title>
-  </head>
-  <body>
-    <header>
-      <h1>Advinhe Meu Número!</h1>
-      <p class="between">(Entre 1 e 20)</p>
-      <button class="btn again">Repetir!</button>
-      <div class="number">?</div>
-    </header>
-    <main>
-      <section class="left">
-        <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
-      </section>
-      <section class="right">
-        <p class="message">Comece a advinhar...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
-        <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
-        </p>
-      </section>
-    </main>
-    <script src="script.js"></script>
-  </body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>M04
+    </title>
+    <style>
+        body {
+          height: 100vh;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          background: linear-gradient(to top left, #360ce0,  #e15e0c);
+        }
+  
+        h1 {
+          font-family: sans-serif;
+          font-size: 50px;
+          line-height: 1.3;
+          width: 50%;
+          text-align: center;
+          color: white;
+        }
+
+        ul{
+          font-family: sans-serif;
+          font-size: 20px;
+          line-height: 1.3;
+          width: 20%;
+          display: inline ;
+          text-align: center;
+          color: white;
+        }
+      </style>
+</head>
+  
+<body>
+    <h1>JavaScript - Seletores</h1>
+
+    <ul>
+      <p>Li - lista</p>
+      <li id='item1'>Item 1</li>
+      <li class='item2'>Item 2</li>
+      <li name='item3'>Item 3</li>
+    </ul>
+
+    <script src="app.js"></script>
+</body>
 </html>
