updating 01 and 03, finish exercicio 02

--- a/03.Eventos/index.html
+++ b/03.Eventos/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>M04</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>JavaScript - Eventos</h1>
+
+    <ul>
+        <li>Comer frango</li>
+        <li>Ler livro</li>
+        <li>Tocar violão</li>
+        <li>Pagar as contas</li>
+    </ul>
+
+    <button>Adicionar item</button>
     <script src="app.js"></script>
 </body>
 </html>
