--- a/01.Seletores/index.html
+++ b/01.Seletores/index.html
@@ -32,6 +32,12 @@
           text-align: center;
           color: white;
         }
+
+        .article-element{
+          font-size: 20px;
+          line-height: 1.3;
+          color: white;
+        }
       </style>
 </head>
   
@@ -44,6 +50,14 @@
       <li class='item2'>Item 2</li>
       <li name='item3'>Item 3</li>
     </ul>
+
+    <article>
+      <p>Novo irmao</p>
+      <h2>Titulo do post</h2>
+      <p>Lorem ipsum dolor sit amet consectetur</p>
+      <p>Lorem ipsum dolor sit amet consectetur</p>
+      <p>Lorem ipsum dolor sit amet consectetur</p>
+    </article>
 
     <script src="app.js"></script>
 </body>
