--- a/Projetos/01.Quiz_Interativo/Copa/index.html
+++ b/Projetos/01.Quiz_Interativo/Copa/index.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="result py-4  bg-light text-center">
+  <div class="final-score-container d-none py-4  bg-light text-center">
     <div class="container lead">
         <p>Você acertou
             <span class="text-primary display-4 p-3">0%</span> 
@@ -21,6 +21,7 @@
         </p>
     </div>
   </div>
+
 
   <div class="quiz py-4 bg-warning">
     <div class="container">
